# ElasticReconstruction

./: .gitignore  CMakeLists.txt  ElasticReconstruction.sln  README.md
BuildCorrespondence/: BuildCorrespondence.cpp  BuildCorrespondence.vcxproj  BuildCorrespondence.vcxproj.filters  CMakeLists.txt  CorresApp.cpp  CorresApp.h  Helper.h  ReadMe.txt
CMake/: FindOpenNI.cmake  FindSuiteSparse.cmake  set_global_properties.cmake
FragmentOptimizer/: CMakeLists.txt  FragmentOptimizer.cpp  FragmentOptimizer.vcxproj  FragmentOptimizer.vcxproj.filters  HashSparseMatrix.cpp  HashSparseMatrix.h  OptApp.cpp  OptApp.h  PointCloud.cpp  PointCloud.h  RGBDTrajectory.h  ReadMe.txt  stdafx.h
GlobalRegistration/: CMakeLists.txt  GlobalRegistration.cpp  GlobalRegistration.vcxproj  GlobalRegistration.vcxproj.filters  PolyRejector.h  RansacCurvature.cpp  RansacCurvature.h  ReadMe.txt  helper.h
GraphOptimizer/: CMakeLists.txt  GraphOptimizer.cpp  GraphOptimizer.vcxproj  GraphOptimizer.vcxproj.filters  OptApp.cpp  OptApp.h  ReadMe.txt  helper.h  stdafx.cpp
GraphOptimizer/vertigo/: edge_se3Switchable.cpp  edge_se3Switchable.h  edge_switchPrior.cpp  edge_switchPrior.h  types_g2o_robust.cpp  vertex_switchLinear.cpp  vertex_switchLinear.h
Integrate/: CMakeLists.txt  ControlGrid.cpp  ControlGrid.h  Integrate.cpp  Integrate.vcxproj  Integrate.vcxproj.filters  IntegrateApp.cpp  IntegrateApp.h  ReadMe.txt  TSDFVolume.cpp  TSDFVolume.h  TSDFVolumeUnit.cpp  TSDFVolumeUnit.h
Matlab_Toolbox/Core/: mrEvaluateRegistration.m  mrEvaluateTrajectory.m
OniWriter/: CMakeLists.txt  OniWriter.cpp
Sandbox/: README.md
Scripts/: SUN3D.param  demo.sh  demo_corres_slac.sh  demo_extract_mesh.sh  demo_sun3d.sh  demo_vol3.sh  downsample.py  draw_webrtc.py  longrange.param  report_correspondence_stats.py  setup_env.sh  test.sh  view_results.py
indoor-executables-1.1/: readme.md
indoor-executables-1.1/sandbox/: readme.md
